--- a/class_02_numpy_pandas.ipynb
+++ b/class_02_numpy_pandas.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "spread-happiness",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
@@ -42,12 +51,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "agreed-single",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.549834   0.47502081 0.52497919 0.68997448 0.4378235 ]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "array = np.array([0.3, 1.2, -1.4, 0.2, -0.1, 0.1, 0.8, -0.25])\n",
+    "sigm = lambda x: 1/(1+np.exp(-x))\n",
+    "array2 = sigm(array[-5:])\n",
+    "print(array2)\n"
    ]
   },
   {
@@ -65,12 +86,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "forbidden-journalism",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a 225\n",
+      "b 225\n",
+      "c 225\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "x= np.array([3,1,4,2,6,1,4,8])\n",
+    "y= np.array([5,2,3,12,2,4,17,11])\n",
+    "\n",
+    "print(\"a \" +str(np.sum(x*y)))\n",
+    "print(\"b \" + str(np.dot(x, y)))\n",
+    "\n",
+    "print(\"c \" + str(np.matmul(x, y)))\n",
+    "\n"
    ]
   },
   {
@@ -88,12 +127,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "falling-holder",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.2417699832615572\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "x = np.array([1.2,2.3,3.4,-0.7,4.2,2.7,-0.5,1.4,-3.3,0.2])\n",
+    "theta = np.array([2.7,0.33,-2.12,-1.73,2.9,-5.8,-0.9,12.11,3.43,-0.5,-1.65])\n",
+    "\n",
+    "fun = lambda x,y: -x*y\n",
+    "power = np.sum(fun(x[:],theta[:len(theta)-1]))\n",
+    "y = 1/(1+np.exp(power - theta[len(theta)-1]))\n",
+    "print(y)"
    ]
   },
   {
@@ -112,12 +166,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "casual-emergency",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 1]\n",
+      " [3 0 1]]\n",
+      "[[0.2]\n",
+      " [0.3]]\n",
+      "\n",
+      "[[8.2 6.2]\n",
+      " [8.3 6.3]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "A = np.array([1,2,1,3,0,1]).reshape(2,3)\n",
+    "print(A)\n",
+    "B = np.array([0.2,0.3]).reshape(2,1)\n",
+    "print(B)\n",
+    "print()\n",
+    "x = np.array([1,2,3])\n",
+    "result = (np.matmul(A,x)+B)\n",
+    "print(result)\n"
    ]
   },
   {
@@ -142,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "alert-friday",
    "metadata": {},
    "outputs": [],
@@ -164,13 +240,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "affecting-disclosure",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user-id</th>\n",
+       "      <th>game-title</th>\n",
+       "      <th>behavior-name</th>\n",
+       "      <th>value</th>\n",
+       "      <th>zero</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>199990</th>\n",
+       "      <td>128470551</td>\n",
+       "      <td>Fallen Earth</td>\n",
+       "      <td>purchase</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199991</th>\n",
+       "      <td>128470551</td>\n",
+       "      <td>Fallen Earth</td>\n",
+       "      <td>play</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199992</th>\n",
+       "      <td>128470551</td>\n",
+       "      <td>Magic Duels</td>\n",
+       "      <td>purchase</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199993</th>\n",
+       "      <td>128470551</td>\n",
+       "      <td>Magic Duels</td>\n",
+       "      <td>play</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199994</th>\n",
+       "      <td>128470551</td>\n",
+       "      <td>Titan Souls</td>\n",
+       "      <td>purchase</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199995</th>\n",
+       "      <td>128470551</td>\n",
+       "      <td>Titan Souls</td>\n",
+       "      <td>play</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199996</th>\n",
+       "      <td>128470551</td>\n",
+       "      <td>Grand Theft Auto Vice City</td>\n",
+       "      <td>purchase</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199997</th>\n",
+       "      <td>128470551</td>\n",
+       "      <td>Grand Theft Auto Vice City</td>\n",
+       "      <td>play</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199998</th>\n",
+       "      <td>128470551</td>\n",
+       "      <td>RUSH</td>\n",
+       "      <td>purchase</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199999</th>\n",
+       "      <td>128470551</td>\n",
+       "      <td>RUSH</td>\n",
+       "      <td>play</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          user-id                  game-title behavior-name  value  zero\n",
+       "199990  128470551                Fallen Earth      purchase    1.0     0\n",
+       "199991  128470551                Fallen Earth          play    2.4     0\n",
+       "199992  128470551                 Magic Duels      purchase    1.0     0\n",
+       "199993  128470551                 Magic Duels          play    2.2     0\n",
+       "199994  128470551                 Titan Souls      purchase    1.0     0\n",
+       "199995  128470551                 Titan Souls          play    1.5     0\n",
+       "199996  128470551  Grand Theft Auto Vice City      purchase    1.0     0\n",
+       "199997  128470551  Grand Theft Auto Vice City          play    1.5     0\n",
+       "199998  128470551                        RUSH      purchase    1.0     0\n",
+       "199999  128470551                        RUSH          play    1.4     0"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ml_df = pd.merge(ml_ratings_df, ml_movies_df, on='movieId')\n",
-    "ml_df.head(10)"
+    "ml_df.head(10)\n",
+    "steam_df.tail(10)"
    ]
   },
   {
@@ -191,12 +400,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "decimal-grass",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12393\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "steam_g = steam_df.loc[steam_df['behavior-name'] == 'purchase']\n",
+    "print(len(pd.unique(steam_g['user-id'])))"
    ]
   },
   {
@@ -209,12 +428,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "distant-overview",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "717\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "steam_g = steam_df.loc[steam_df['game-title'] == 'The Elder Scrolls V Skyrim']\n",
+    "x = pd.unique(steam_g['user-id'])\n",
+    "print(len(x))"
    ]
   },
   {
@@ -227,12 +457,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "id": "reflected-cathedral",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user-id\n",
+      "5250         21.0\n",
+      "76767        36.0\n",
+      "86540        82.0\n",
+      "103360       10.0\n",
+      "144736        8.0\n",
+      "             ... \n",
+      "309554670     1.0\n",
+      "309626088     1.0\n",
+      "309812026     2.0\n",
+      "309824202     1.0\n",
+      "309903146     1.0\n",
+      "Name: value, Length: 12393, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "users = len(pd.unique(steam_df['user-id']))\n",
+    "cond = steam_df['value'] == 1.0\n",
+    "cond2 = steam_df['behavior-name'] == 'purchase'\n",
+    "g = steam_df[cond2]\n",
+    "group = g.groupby('user-id')['value'].sum()\n",
+    "print(group)\n",
+    "\n"
    ]
   },
   {
@@ -245,12 +502,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "handmade-revolution",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Series' object has no attribute 'sort_value'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_6292/2584605723.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mcond2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msteam_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'behavior-name'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'purchase'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msteam_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcond2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'user-id'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'value'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort_value\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mby\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'value'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mc:\\software\\python3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5485\u001b[0m         ):\n\u001b[0;32m   5486\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5487\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   5488\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5489\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Series' object has no attribute 'sort_value'"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "cond2 = steam_df['behavior-name'] == 'purchase'\n",
+    "g = steam_df[cond2].groupby('user-id')['value'].sum()\n",
+    "g.sort_value(by=['value'])"
    ]
   },
   {
@@ -508,7 +781,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -522,7 +795,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
