--- a/class_02_numpy_pandas.ipynb
+++ b/class_02_numpy_pandas.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "spread-happiness",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
@@ -209,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "alert-friday",
    "metadata": {},
    "outputs": [],
@@ -231,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "affecting-disclosure",
    "metadata": {},
    "outputs": [
@@ -362,7 +371,7 @@
        "199999  128470551                        RUSH          play    1.4     0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1695,7 +1704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 128,
    "id": "brazilian-frost",
    "metadata": {},
    "outputs": [
@@ -1721,132 +1730,76 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>userId</th>\n",
-       "      <th>movieId</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>timestamp</th>\n",
        "      <th>title</th>\n",
-       "      <th>genres</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>65855</th>\n",
-       "      <td>477</td>\n",
-       "      <td>4979</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>1200939537</td>\n",
-       "      <td>Royal Tenenbaums, The (2001)</td>\n",
-       "      <td>Comedy|Drama</td>\n",
+       "      <th>26850</th>\n",
+       "      <td>370</td>\n",
+       "      <td>Terminator 2: Judgment Day (1991)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2254</th>\n",
-       "      <td>577</td>\n",
-       "      <td>316</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>945965886</td>\n",
-       "      <td>Stargate (1994)</td>\n",
-       "      <td>Action|Adventure|Sci-Fi</td>\n",
+       "      <th>61933</th>\n",
+       "      <td>555</td>\n",
+       "      <td>Back to School (1986)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>67856</th>\n",
-       "      <td>63</td>\n",
-       "      <td>81229</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1443200311</td>\n",
-       "      <td>Red (2010)</td>\n",
-       "      <td>Action|Comedy</td>\n",
+       "      <th>88516</th>\n",
+       "      <td>105</td>\n",
+       "      <td>Watch Out for the Automobile (Beregis avtomobi...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>81462</th>\n",
-       "      <td>306</td>\n",
-       "      <td>166534</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1518327356</td>\n",
-       "      <td>Split (2017)</td>\n",
-       "      <td>Drama|Horror|Thriller</td>\n",
+       "      <th>58243</th>\n",
+       "      <td>387</td>\n",
+       "      <td>Kingpin (1996)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>40166</th>\n",
-       "      <td>469</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>965334279</td>\n",
-       "      <td>Godfather: Part III, The (1990)</td>\n",
-       "      <td>Crime|Drama|Mystery|Thriller</td>\n",
+       "      <th>17965</th>\n",
+       "      <td>560</td>\n",
+       "      <td>Interstellar (2014)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>87265</th>\n",
-       "      <td>571</td>\n",
-       "      <td>3018</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>966900368</td>\n",
-       "      <td>Re-Animator (1985)</td>\n",
-       "      <td>Comedy|Horror|Sci-Fi</td>\n",
+       "      <th>21328</th>\n",
+       "      <td>265</td>\n",
+       "      <td>Amadeus (1984)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>38636</th>\n",
-       "      <td>210</td>\n",
-       "      <td>8907</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>1475611030</td>\n",
-       "      <td>Shark Tale (2004)</td>\n",
-       "      <td>Animation|Children|Comedy</td>\n",
+       "      <th>76493</th>\n",
+       "      <td>599</td>\n",
+       "      <td>Big Chill, The (1983)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>76785</th>\n",
-       "      <td>135</td>\n",
-       "      <td>3098</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1009693996</td>\n",
-       "      <td>Natural, The (1984)</td>\n",
-       "      <td>Drama</td>\n",
+       "      <th>1046</th>\n",
+       "      <td>494</td>\n",
+       "      <td>Braveheart (1995)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>62908</th>\n",
-       "      <td>182</td>\n",
-       "      <td>2995</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>1075859308</td>\n",
-       "      <td>House on Haunted Hill (1999)</td>\n",
-       "      <td>Horror|Thriller</td>\n",
+       "      <th>95852</th>\n",
+       "      <td>474</td>\n",
+       "      <td>Quiet American, The (2002)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>54750</th>\n",
-       "      <td>483</td>\n",
-       "      <td>38061</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1178213543</td>\n",
-       "      <td>Kiss Kiss Bang Bang (2005)</td>\n",
-       "      <td>Comedy|Crime|Mystery|Thriller</td>\n",
+       "      <th>15297</th>\n",
+       "      <td>57</td>\n",
+       "      <td>Wayne's World (1992)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       userId  movieId  rating   timestamp                            title  \\\n",
-       "65855     477     4979     4.5  1200939537     Royal Tenenbaums, The (2001)   \n",
-       "2254      577      316     2.0   945965886                  Stargate (1994)   \n",
-       "67856      63    81229     4.0  1443200311                       Red (2010)   \n",
-       "81462     306   166534     4.0  1518327356                     Split (2017)   \n",
-       "40166     469     2023     3.0   965334279  Godfather: Part III, The (1990)   \n",
-       "87265     571     3018     1.0   966900368               Re-Animator (1985)   \n",
-       "38636     210     8907     1.5  1475611030                Shark Tale (2004)   \n",
-       "76785     135     3098     4.0  1009693996              Natural, The (1984)   \n",
-       "62908     182     2995     1.5  1075859308     House on Haunted Hill (1999)   \n",
-       "54750     483    38061     5.0  1178213543       Kiss Kiss Bang Bang (2005)   \n",
-       "\n",
-       "                              genres  \n",
-       "65855                   Comedy|Drama  \n",
-       "2254         Action|Adventure|Sci-Fi  \n",
-       "67856                  Action|Comedy  \n",
-       "81462          Drama|Horror|Thriller  \n",
-       "40166   Crime|Drama|Mystery|Thriller  \n",
-       "87265           Comedy|Horror|Sci-Fi  \n",
-       "38636      Animation|Children|Comedy  \n",
-       "76785                          Drama  \n",
-       "62908                Horror|Thriller  \n",
-       "54750  Comedy|Crime|Mystery|Thriller  "
+       "       userId                                              title\n",
+       "26850     370                  Terminator 2: Judgment Day (1991)\n",
+       "61933     555                              Back to School (1986)\n",
+       "88516     105  Watch Out for the Automobile (Beregis avtomobi...\n",
+       "58243     387                                     Kingpin (1996)\n",
+       "17965     560                                Interstellar (2014)\n",
+       "21328     265                                     Amadeus (1984)\n",
+       "76493     599                              Big Chill, The (1983)\n",
+       "1046      494                                  Braveheart (1995)\n",
+       "95852     474                         Quiet American, The (2002)\n",
+       "15297      57                               Wayne's World (1992)"
       ]
      },
      "metadata": {},
@@ -1873,145 +1826,165 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>userId</th>\n",
-       "      <th>movieId</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>title</th>\n",
-       "      <th>genres</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>26278</th>\n",
-       "      <td>480</td>\n",
-       "      <td>364</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>1179162651</td>\n",
-       "      <td>Lion King, The (1994)</td>\n",
-       "      <td>Adventure|Animation|Children|Drama|Musical|IMAX</td>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5029</th>\n",
-       "      <td>451</td>\n",
-       "      <td>661</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>854089684</td>\n",
-       "      <td>James and the Giant Peach (1996)</td>\n",
-       "      <td>Adventure|Animation|Children|Fantasy|Musical</td>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43205</th>\n",
-       "      <td>561</td>\n",
-       "      <td>97938</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1491095239</td>\n",
-       "      <td>Life of Pi (2012)</td>\n",
-       "      <td>Adventure|Drama|IMAX</td>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>100311</th>\n",
-       "      <td>599</td>\n",
-       "      <td>83086</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>1498516978</td>\n",
-       "      <td>Burlesque (2010)</td>\n",
-       "      <td>Drama|Musical|Romance</td>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8964</th>\n",
-       "      <td>222</td>\n",
-       "      <td>1278</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1391349956</td>\n",
-       "      <td>Young Frankenstein (1974)</td>\n",
-       "      <td>Comedy|Fantasy</td>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>83472</th>\n",
-       "      <td>474</td>\n",
-       "      <td>4823</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1002756838</td>\n",
-       "      <td>Serendipity (2001)</td>\n",
-       "      <td>Comedy|Romance</td>\n",
+       "      <th>5</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12598</th>\n",
-       "      <td>249</td>\n",
-       "      <td>2542</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1346757796</td>\n",
-       "      <td>Lock, Stock &amp; Two Smoking Barrels (1998)</td>\n",
-       "      <td>Comedy|Crime|Thriller</td>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>78567</th>\n",
-       "      <td>562</td>\n",
-       "      <td>5810</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1368896062</td>\n",
-       "      <td>8 Mile (2002)</td>\n",
-       "      <td>Drama</td>\n",
+       "      <th>7</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>80037</th>\n",
-       "      <td>414</td>\n",
-       "      <td>69481</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>1273977063</td>\n",
-       "      <td>Hurt Locker, The (2008)</td>\n",
-       "      <td>Action|Drama|Thriller|War</td>\n",
+       "      <th>8</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4497</th>\n",
-       "      <td>414</td>\n",
-       "      <td>593</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>961516659</td>\n",
-       "      <td>Silence of the Lambs, The (1991)</td>\n",
-       "      <td>Crime|Horror|Thriller</td>\n",
+       "      <th>9</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        userId  movieId  rating   timestamp  \\\n",
-       "26278      480      364     3.5  1179162651   \n",
-       "5029       451      661     4.0   854089684   \n",
-       "43205      561    97938     3.0  1491095239   \n",
-       "100311     599    83086     2.5  1498516978   \n",
-       "8964       222     1278     4.0  1391349956   \n",
-       "83472      474     4823     4.0  1002756838   \n",
-       "12598      249     2542     4.0  1346757796   \n",
-       "78567      562     5810     5.0  1368896062   \n",
-       "80037      414    69481     4.5  1273977063   \n",
-       "4497       414      593     4.0   961516659   \n",
-       "\n",
-       "                                           title  \\\n",
-       "26278                      Lion King, The (1994)   \n",
-       "5029            James and the Giant Peach (1996)   \n",
-       "43205                          Life of Pi (2012)   \n",
-       "100311                          Burlesque (2010)   \n",
-       "8964                   Young Frankenstein (1974)   \n",
-       "83472                         Serendipity (2001)   \n",
-       "12598   Lock, Stock & Two Smoking Barrels (1998)   \n",
-       "78567                              8 Mile (2002)   \n",
-       "80037                    Hurt Locker, The (2008)   \n",
-       "4497            Silence of the Lambs, The (1991)   \n",
-       "\n",
-       "                                                 genres  \n",
-       "26278   Adventure|Animation|Children|Drama|Musical|IMAX  \n",
-       "5029       Adventure|Animation|Children|Fantasy|Musical  \n",
-       "43205                              Adventure|Drama|IMAX  \n",
-       "100311                            Drama|Musical|Romance  \n",
-       "8964                                     Comedy|Fantasy  \n",
-       "83472                                    Comedy|Romance  \n",
-       "12598                             Comedy|Crime|Thriller  \n",
-       "78567                                             Drama  \n",
-       "80037                         Action|Drama|Thriller|War  \n",
-       "4497                              Crime|Horror|Thriller  "
+       "   0  1  2  3  4  5  6  7  8  9\n",
+       "0  0  0  0  0  0  0  0  0  0  0\n",
+       "1  0  0  0  0  0  0  0  0  0  0\n",
+       "2  0  0  0  0  0  0  0  0  0  0\n",
+       "3  0  0  0  0  0  0  0  0  0  0\n",
+       "4  0  0  0  0  0  0  0  0  0  0\n",
+       "5  0  0  0  0  0  0  0  0  0  0\n",
+       "6  0  0  0  0  0  0  0  0  0  0\n",
+       "7  0  0  0  0  0  0  0  0  0  0\n",
+       "8  0  0  0  0  0  0  0  0  0  0\n",
+       "9  0  0  0  0  0  0  0  0  0  0"
       ]
      },
      "metadata": {},
@@ -2025,9 +1998,25 @@
     "g1 = g.sample(n=10)\n",
     "g2 = g.sample(n=10)\n",
     "\n",
+    "g1 = g1.loc[:, ['userId', 'title']]\n",
+    "g2 = g2.loc[:, ['userId', 'title']]\n",
+    "\n",
     "display(g1)\n",
-    "display(g2)\n",
-    "\n"
+    "\n",
+    "d = list()\n",
+    "i = 0\n",
+    "for idx, row in g1.iterrows():\n",
+    "    d.append(list())\n",
+    "    for o, row2 in g2.iterrows():\n",
+    "        if row['userId'] == row2['userId']:\n",
+    "            d[i].append(1)\n",
+    "        else:\n",
+    "            d[i].append(0)\n",
+    "    i += 1\n",
+    "\n",
+    "d = np.array(d)\n",
+    "df = pd.DataFrame(d)\n",
+    "display(df)"
    ]
   },
   {
