--- a/class_04_content_based_recommenders.ipynb
+++ b/class_04_content_based_recommenders.ipynb
@@ -85,11 +85,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "sixth-basketball",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recommendations\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>item_id</th>\n",
+       "      <th>score</th>\n",
+       "      <th>title</th>\n",
+       "      <th>genres</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Usual Suspects, The (1995)</td>\n",
+       "      <td>Crime|Mystery|Thriller</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Usual Suspects, The (1995)</td>\n",
+       "      <td>Crime|Mystery|Thriller</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Usual Suspects, The (1995)</td>\n",
+       "      <td>Crime|Mystery|Thriller</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Recommender</th>\n",
+       "      <th>HR@1</th>\n",
+       "      <th>HR@3</th>\n",
+       "      <th>HR@5</th>\n",
+       "      <th>HR@10</th>\n",
+       "      <th>NDCG@1</th>\n",
+       "      <th>NDCG@3</th>\n",
+       "      <th>NDCG@5</th>\n",
+       "      <th>NDCG@10</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MostPopularRecommender</td>\n",
+       "      <td>0.013333</td>\n",
+       "      <td>0.013333</td>\n",
+       "      <td>0.013333</td>\n",
+       "      <td>0.013333</td>\n",
+       "      <td>0.013333</td>\n",
+       "      <td>0.013333</td>\n",
+       "      <td>0.013333</td>\n",
+       "      <td>0.013333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "def hr(recommendations, real_interactions, n=1):\n",
+    "    \"\"\"\n",
+    "    Assumes recommendations are ordered by user_id and then by score.\n",
+    "    \"\"\"\n",
+    "    hr =0.0\n",
+    "    rui = defaultdict(lambda: 0)\n",
+    "    for idx, row in real_interactions.iterrows():\n",
+    "        rui[(row['user_id'], row['item_id'])] = 1\n",
+    "    previous_user_id = -1\n",
+    "    rank = 0\n",
+    "    for idx, row in recommendations.iterrows():\n",
+    "        if previous_user_id == row['user_id']:\n",
+    "            rank += 1\n",
+    "        else:\n",
+    "            rank = 1\n",
+    "            \n",
+    "        if rank <= n:\n",
+    "            hr += rui[(row['user_id'], row['item_id'])]\n",
+    "        \n",
+    "        previous_user_id = row['user_id']\n",
+    "    \n",
+    "    hr /= len(recommendations['user_id'].unique())\n",
+    "    \n",
+    "    return hr\n",
+    "\n",
+    "\n",
+    "def ndcg(recommendations, real_interactions, n=1):\n",
+    "    \"\"\"\n",
+    "    Assumes recommendations are ordered by user_id and then by score.\n",
+    "    \"\"\"\n",
+    "    ndcg = 0.0\n",
+    "    rui = defaultdict(lambda: 0)\n",
+    "    user_idx = -1\n",
+    "    item_idx = 0\n",
+    "        \n",
+    "    \n",
+    "    for i, row in real_interactions.iterrows():\n",
+    "        rui[(row['user_id'], row['item_id'])] = 1\n",
+    "       \n",
+    "    for i, row in recommendations.iterrows():\n",
+    "        if user_idx == row['user_id']:\n",
+    "            item_idx += 1\n",
+    "        else:\n",
+    "            item_idx = 1\n",
+    "            \n",
+    "        if item_idx <= n:\n",
+    "            ndcg += rui[(row['user_id'], row['item_id'])] / np.log2(1 + item_idx)\n",
+    "        \n",
+    "        user_idx = row['user_id']\n",
+    "       \n",
+    "    ndcg /= len(recommendations['user_id'].unique())\n",
+    "    \n",
+    "    return ndcg\n",
+    "\n",
+    "\n",
+    "def evaluate_leave_one_out_implicitt(recommender, interactions_df, items_df, max_evals=300, seed=6789):\n",
+    "    # Write your code here\n",
+    "    kf = KFold(n_splits=len(interactions_df), random_state=rng, shuffle=True)\n",
+    "    \n",
+    "    hr_1 = []\n",
+    "    hr_3 = []\n",
+    "    hr_5 = []\n",
+    "    hr_10 = []\n",
+    "    ndcg_1 = []\n",
+    "    ndcg_3 = []\n",
+    "    ndcg_5 = []\n",
+    "    ndcg_10 = []\n",
+    "    \n",
+    "    \n",
+    "    n_eval = 1\n",
+    "    for train_index, test_index in kf.split(interactions_df.index):\n",
+    "        train_set = interactions_df.loc[interactions_df.index[train_index]]\n",
+    "        test_set = interactions_df.loc[interactions_df.index[test_index]]\n",
+    "                \n",
+    "        recommender.fit(train_set, None, items_df)\n",
+    "        recommendations = recommender.recommend(test_set.loc[:, ['user_id']], items_df, n_recommendations=10)\n",
+    "        \n",
+    "        hr_1.append(hr(recommendations, test_set, n=1))\n",
+    "        hr_3.append(hr(recommendations, test_set, n=3))\n",
+    "        hr_5.append(hr(recommendations, test_set, n=5))\n",
+    "        hr_10.append(hr(recommendations, test_set, n=10))\n",
+    "        ndcg_1.append(ndcg(recommendations, test_set, n=1))\n",
+    "        ndcg_3.append(ndcg(recommendations, test_set, n=3))\n",
+    "        ndcg_5.append(ndcg(recommendations, test_set, n=5))\n",
+    "        ndcg_10.append(ndcg(recommendations, test_set, n=10))\n",
+    "        \n",
+    "        if n_eval == max_evals:\n",
+    "            break\n",
+    "        n_eval += 1\n",
+    "        \n",
+    "    hr_1 = np.mean(hr_1)\n",
+    "    hr_3 = np.mean(hr_3)\n",
+    "    hr_5 = np.mean(hr_5)\n",
+    "    hr_10 = np.mean(hr_10)\n",
+    "    ndcg_1 = np.mean(ndcg_1)\n",
+    "    ndcg_3 = np.mean(ndcg_3)\n",
+    "    ndcg_5 = np.mean(ndcg_5)\n",
+    "    ndcg_10 = np.mean(ndcg_10)\n",
+    "    \n",
+    "    return hr_1, hr_3, hr_5, hr_10, ndcg_1, ndcg_3, ndcg_5, ndcg_10\n",
+    "\n",
+    "\n",
+    "\n",
     "class MostPopularRecommender(Recommender):\n",
     "    \"\"\"\n",
     "    Base recommender class.\n",
@@ -111,6 +312,19 @@
     "        :param pd.DataFrame items_df: DataFrame with items and their features defined by item_id and the item feature columns.\n",
     "        \"\"\"\n",
     "        # Write your code here\n",
+    "        items_popularity = defaultdict(lambda: 0)\n",
+    "#         for i, row in interactions_df.iterrows():\n",
+    "#             if row['item_id'] in items_popularity:\n",
+    "#                 items_popularity[row['item_id']] += 1\n",
+    "#             else:\n",
+    "#                 items_popularity[row['item_id']] = 1\n",
+    "#         self.most_popular_item = items_popularity[max(items_popularity, key=items_popularity.get)]\n",
+    "        p = interactions_df.loc[:,['item_id', 'user_id']].groupby(by='item_id').count()\n",
+    "#         p = p.rename({'rating':'popularity'}, axis=1)\n",
+    "        p = p.sort_values(by='user_id', ascending=False)\n",
+    "        \n",
+    "        self.most_popular_item = p.reset_index().iloc[0]['item_id']\n",
+    "        \n",
     "    \n",
     "    def recommend(self, users_df, items_df, n_recommendations=1):\n",
     "        \"\"\"\n",
@@ -135,8 +349,14 @@
     "            recommendations = pd.concat([recommendations, user_recommendations])\n",
     "\n",
     "        return recommendations\n",
+    "\n",
+    "\n",
     "    \n",
+    "\n",
+    "\n",
+    "\n",
     "# Quick test of the recommender\n",
+    "\n",
     "\n",
     "most_popular_recommender = MostPopularRecommender()\n",
     "most_popular_recommender.fit(ml_ratings_df, None, ml_movies_df)\n",
@@ -148,7 +368,7 @@
     "\n",
     "most_popular_recommender = MostPopularRecommender()\n",
     "\n",
-    "most_popular_results = [['MostPopularRecommender'] + list(evaluate_leave_one_out_implicit(\n",
+    "most_popular_results = [['MostPopularRecommender'] + list(evaluate_leave_one_out_implicitt(\n",
     "    most_popular_recommender, ml_ratings_df.loc[:, ['user_id', 'item_id']], ml_movies_df, max_evals=300, seed=6789))]\n",
     "\n",
     "most_popular_results = pd.DataFrame(\n",
@@ -1089,7 +1309,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1103,7 +1323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
