--- a/lecture_04_content_based_recommenders.ipynb
+++ b/lecture_04_content_based_recommenders.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 2,
    "id": "exciting-specific",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 3,
    "id": "architectural-andrews",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 10,
    "id": "sonic-horror",
    "metadata": {},
    "outputs": [],
@@ -242,7 +242,7 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.preprocessing import MultiLabelBinarizer\n",
     "\n",
-    "class LinearRegressionRecommender(Recommender):\n",
+    "class LinearRegressionRecommender():\n",
     "    \"\"\"\n",
     "    Linear regression recommender class.\n",
     "    \"\"\"\n",
@@ -348,6 +348,7 @@
     "    \n",
     "        recommendations = pd.DataFrame(columns=['user_id', 'item_id', 'score'])\n",
     "        \n",
+    "        \n",
     "        for ix, user in users_df.iterrows():\n",
     "            if user['user_id'] in self.users_dict:\n",
     "                user_df = pd.DataFrame.from_dict({user['user_id']: self.users_dict[user['user_id']]}, orient='index')\n",
@@ -396,12 +397,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
    "id": "colored-favorite",
    "metadata": {
     "scrolled": false
    },
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['user_action',\n",
+       " 'user_adventure',\n",
+       " 'user_animation',\n",
+       " 'user_children',\n",
+       " 'user_comedy',\n",
+       " 'user_crime',\n",
+       " 'user_documentary',\n",
+       " 'user_drama',\n",
+       " 'user_fantasy',\n",
+       " 'user_film_noir',\n",
+       " 'user_horror',\n",
+       " 'user_imax',\n",
+       " 'user_musical',\n",
+       " 'user_mystery',\n",
+       " 'user_no_genres_listed',\n",
+       " 'user_romance',\n",
+       " 'user_sci_fi',\n",
+       " 'user_thriller',\n",
+       " 'user_war',\n",
+       " 'user_western']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/html": [
