--- a/class_10_neural_networks.ipynb
+++ b/class_10_neural_networks.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "spread-happiness",
    "metadata": {},
    "outputs": [],
@@ -53,22 +53,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "agreed-single",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[30]\n"
+     ]
+    }
+   ],
    "source": [
     "def relu(x):\n",
     "    ########################\n",
     "    # Write your code here #\n",
     "    ########################\n",
+    "    return x * (x > 0)\n",
     "\n",
     "def feed_forward_1(x, w1, w2):\n",
     "    ########################\n",
     "    # Write your code here #\n",
     "    ########################\n",
-    "\n",
+    "    a = np.dot(w1, x)\n",
+    "    b = np.dot(w2, relu(a))\n",
+    "    return relu(b)\n",
     "# Test\n",
+    "x = np.array([[5],[2]])\n",
+    "w1 = np.array([[-5,-4],\n",
+    "             [-2,1],\n",
+    "              [1,5]])\n",
+    "w2= np.array([1,0,2])\n",
+    "\n",
+    "test = feed_forward_1(x, w1, w2)\n",
+    "\n",
+    "print(test)\n",
     "\n",
     "########################\n",
     "# Write your code here #\n",
@@ -97,26 +117,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "forbidden-journalism",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[29.99999082]\n"
+     ]
+    }
+   ],
    "source": [
     "def sigmoid(x):\n",
     "    ########################\n",
     "    # Write your code here #\n",
     "    ########################\n",
+    "    return x/(1+np.exp(-x))\n",
     "\n",
     "def feed_forward_2(x, w1, w2):\n",
     "    ########################\n",
     "    # Write your code here #\n",
     "    ########################\n",
-    "\n",
+    "    a = np.dot(w1, x)\n",
+    "    b = np.dot(w2, sigmoid(a))\n",
+    "    return sigmoid(b)\n",
     "# Test\n",
     "\n",
     "########################\n",
     "# Write your code here #\n",
-    "########################"
+    "########################\n",
+    "\n",
+    "x = np.array([[5],[2]])\n",
+    "w1 = np.array([[-5,-4],\n",
+    "             [-2,1],\n",
+    "              [1,5]])\n",
+    "w2= np.array([1,0,2])\n",
+    "\n",
+    "test = feed_forward_2(x, w1, w2)\n",
+    "\n",
+    "print(test)"
    ]
   },
   {
@@ -141,26 +182,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "falling-holder",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[9.9999969e-01]\n",
+      " [0.0000000e+00]\n",
+      " [3.1000000e-07]]\n",
+      "[[2.6876225e-01]\n",
+      " [6.6620000e-04]\n",
+      " [7.3057155e-01]]\n",
+      "[[9.9999386e-01]\n",
+      " [6.1400000e-06]\n",
+      " [0.0000000e+00]]\n"
+     ]
+    }
+   ],
    "source": [
     "def softmax(x):\n",
     "    ########################\n",
     "    # Write your code here #\n",
     "    ########################\n",
+    "    e = np.exp(x)\n",
+    "    return np.round(e / np.sum(e),8)\n",
     "\n",
     "def feed_forward_3(x, w1, w2):\n",
     "    ########################\n",
     "    # Write your code here #\n",
     "    ########################\n",
+    "    a = np.dot(w1, x)\n",
+    "    b = np.dot(w2, relu(a))\n",
+    "    return softmax(b)\n",
     "\n",
     "# Test\n",
     "\n",
     "########################\n",
     "# Write your code here #\n",
-    "########################"
+    "########################\n",
+    "x = np.array([[5],[2]])\n",
+    "w1 = np.array([[-5,-4],\n",
+    "             [-2,1],\n",
+    "              [1,5]])\n",
+    "w2= np.array([[1,2,3],\n",
+    "             [3,2,1],\n",
+    "             [1,0,2]])\n",
+    "test = feed_forward_3(x, w1, w2)\n",
+    "print(test)\n",
+    "\n",
+    "x = np.array([[1],[2]])\n",
+    "w1 = np.array([[0,-4],\n",
+    "             [1,1],\n",
+    "              [1,3]])\n",
+    "w2= np.array([[1,2,1],\n",
+    "             [2,0,1],\n",
+    "             [1,0,2]])\n",
+    "test = feed_forward_3(x, w1, w2)\n",
+    "print(test)\n",
+    "\n",
+    "x = np.array([[5],[3]])\n",
+    "w1 = np.array([[-5,30],\n",
+    "             [-2,31],\n",
+    "              [1,5]])\n",
+    "w2= np.array([[-1,6,-2],\n",
+    "             [3,2,1],\n",
+    "             [1,0,2]])\n",
+    "test = feed_forward_3(x, w1, w2)\n",
+    "print(test)"
    ]
   },
   {
@@ -188,6 +279,7 @@
     "    ########################\n",
     "    # Write your code here #\n",
     "    ########################\n",
+    "    \n",
     "    \n",
     "# Test\n",
     "\n",
@@ -372,7 +464,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -386,7 +478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
