--- a/project_1_recommender_and_evaluation.ipynb
+++ b/project_1_recommender_and_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "alike-morgan",
    "metadata": {},
    "outputs": [],
@@ -33,10 +33,251 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "victorian-bottom",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>item_id</th>\n",
+       "      <th>term</th>\n",
+       "      <th>length_of_stay_bucket</th>\n",
+       "      <th>rate_plan</th>\n",
+       "      <th>room_segment</th>\n",
+       "      <th>n_people_bucket</th>\n",
+       "      <th>weekend_stay</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>WinterVacation</td>\n",
+       "      <td>[2-3]</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>[260-360]</td>\n",
+       "      <td>[5-inf]</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>WinterVacation</td>\n",
+       "      <td>[2-3]</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>[160-260]</td>\n",
+       "      <td>[3-4]</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>WinterVacation</td>\n",
+       "      <td>[2-3]</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>[160-260]</td>\n",
+       "      <td>[2-2]</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>WinterVacation</td>\n",
+       "      <td>[4-7]</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>[160-260]</td>\n",
+       "      <td>[3-4]</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>WinterVacation</td>\n",
+       "      <td>[4-7]</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>[0-160]</td>\n",
+       "      <td>[2-2]</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Easter</td>\n",
+       "      <td>[4-7]</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>[260-360]</td>\n",
+       "      <td>[5-inf]</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>OffSeason</td>\n",
+       "      <td>[2-3]</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>[260-360]</td>\n",
+       "      <td>[5-inf]</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>7</td>\n",
+       "      <td>HighSeason</td>\n",
+       "      <td>[2-3]</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>[160-260]</td>\n",
+       "      <td>[1-1]</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>8</td>\n",
+       "      <td>HighSeason</td>\n",
+       "      <td>[2-3]</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>[0-160]</td>\n",
+       "      <td>[1-1]</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>8</td>\n",
+       "      <td>7</td>\n",
+       "      <td>HighSeason</td>\n",
+       "      <td>[2-3]</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>[160-260]</td>\n",
+       "      <td>[1-1]</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>8</td>\n",
+       "      <td>7</td>\n",
+       "      <td>HighSeason</td>\n",
+       "      <td>[2-3]</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>[160-260]</td>\n",
+       "      <td>[1-1]</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>HighSeason</td>\n",
+       "      <td>[2-3]</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>[160-260]</td>\n",
+       "      <td>[3-4]</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>11</td>\n",
+       "      <td>9</td>\n",
+       "      <td>HighSeason</td>\n",
+       "      <td>[2-3]</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>[160-260]</td>\n",
+       "      <td>[3-4]</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>12</td>\n",
+       "      <td>10</td>\n",
+       "      <td>HighSeason</td>\n",
+       "      <td>[8-inf]</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>[160-260]</td>\n",
+       "      <td>[3-4]</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>15</td>\n",
+       "      <td>11</td>\n",
+       "      <td>LowSeason</td>\n",
+       "      <td>[2-3]</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>[160-260]</td>\n",
+       "      <td>[5-inf]</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    user_id  item_id            term length_of_stay_bucket rate_plan  \\\n",
+       "0         1        0  WinterVacation                 [2-3]  Standard   \n",
+       "1         2        1  WinterVacation                 [2-3]  Standard   \n",
+       "2         3        2  WinterVacation                 [2-3]  Standard   \n",
+       "3         4        3  WinterVacation                 [4-7]  Standard   \n",
+       "4         5        4  WinterVacation                 [4-7]  Standard   \n",
+       "5         6        5          Easter                 [4-7]  Standard   \n",
+       "6         7        6       OffSeason                 [2-3]  Standard   \n",
+       "7         8        7      HighSeason                 [2-3]  Standard   \n",
+       "8         9        8      HighSeason                 [2-3]  Standard   \n",
+       "9         8        7      HighSeason                 [2-3]  Standard   \n",
+       "10        8        7      HighSeason                 [2-3]  Standard   \n",
+       "11       10        9      HighSeason                 [2-3]  Standard   \n",
+       "12       11        9      HighSeason                 [2-3]  Standard   \n",
+       "13       12       10      HighSeason               [8-inf]  Standard   \n",
+       "14       15       11       LowSeason                 [2-3]  Standard   \n",
+       "\n",
+       "   room_segment n_people_bucket weekend_stay  \n",
+       "0     [260-360]         [5-inf]         True  \n",
+       "1     [160-260]           [3-4]         True  \n",
+       "2     [160-260]           [2-2]        False  \n",
+       "3     [160-260]           [3-4]         True  \n",
+       "4       [0-160]           [2-2]         True  \n",
+       "5     [260-360]         [5-inf]         True  \n",
+       "6     [260-360]         [5-inf]         True  \n",
+       "7     [160-260]           [1-1]         True  \n",
+       "8       [0-160]           [1-1]         True  \n",
+       "9     [160-260]           [1-1]         True  \n",
+       "10    [160-260]           [1-1]         True  \n",
+       "11    [160-260]           [3-4]         True  \n",
+       "12    [160-260]           [3-4]         True  \n",
+       "13    [160-260]           [3-4]         True  \n",
+       "14    [160-260]         [5-inf]         True  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "data_path = os.path.join(\"data\", \"hotel_data\")\n",
     "\n",
@@ -442,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "greatest-canon",
    "metadata": {},
    "outputs": [],
@@ -489,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "strange-alaska",
    "metadata": {},
    "outputs": [],
@@ -501,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "stable-theta",
    "metadata": {},
    "outputs": [],
@@ -689,10 +930,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "suited-nomination",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Recommender</th>\n",
+       "      <th>HR@1</th>\n",
+       "      <th>HR@3</th>\n",
+       "      <th>HR@5</th>\n",
+       "      <th>HR@10</th>\n",
+       "      <th>NDCG@1</th>\n",
+       "      <th>NDCG@3</th>\n",
+       "      <th>NDCG@5</th>\n",
+       "      <th>NDCG@10</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AmazonRecommender</td>\n",
+       "      <td>0.044128</td>\n",
+       "      <td>0.118805</td>\n",
+       "      <td>0.160896</td>\n",
+       "      <td>0.223693</td>\n",
+       "      <td>0.044128</td>\n",
+       "      <td>0.086755</td>\n",
+       "      <td>0.104347</td>\n",
+       "      <td>0.124505</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Recommender      HR@1      HR@3      HR@5     HR@10    NDCG@1  \\\n",
+       "0  AmazonRecommender  0.044128  0.118805  0.160896  0.223693  0.044128   \n",
+       "\n",
+       "     NDCG@3    NDCG@5   NDCG@10  \n",
+       "0  0.086755  0.104347  0.124505  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from recommenders.amazon_recommender import AmazonRecommender\n",
     "\n",
@@ -729,7 +1031,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -743,7 +1045,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
