--- a/class_10_neural_networks.ipynb
+++ b/class_10_neural_networks.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "id": "agreed-single",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[30]\n"
+      "8\n"
      ]
     }
    ],
@@ -80,11 +80,11 @@
     "    b = np.dot(w2, relu(a))\n",
     "    return relu(b)\n",
     "# Test\n",
-    "x = np.array([[5],[2]])\n",
-    "w1 = np.array([[-5,-4],\n",
-    "             [-2,1],\n",
-    "              [1,5]])\n",
-    "w2= np.array([1,0,2])\n",
+    "x = np.array([-1, 1])\n",
+    "w1 = np.array([[2, -1],\n",
+    "               [-5, -2],\n",
+    "               [1, 3]])\n",
+    "w2 = np.array([1, 2, 1])\n",
     "\n",
     "test = feed_forward_1(x, w1, w2)\n",
     "\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 26,
    "id": "forbidden-journalism",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[29.99999082]\n"
+      "0.9444527266801629\n"
      ]
     }
    ],
@@ -134,7 +134,7 @@
     "    ########################\n",
     "    # Write your code here #\n",
     "    ########################\n",
-    "    return x/(1+np.exp(-x))\n",
+    "    return 1/(1+np.exp(-x))\n",
     "\n",
     "def feed_forward_2(x, w1, w2):\n",
     "    ########################\n",
@@ -149,11 +149,11 @@
     "# Write your code here #\n",
     "########################\n",
     "\n",
-    "x = np.array([[5],[2]])\n",
-    "w1 = np.array([[-5,-4],\n",
-    "             [-2,1],\n",
-    "              [1,5]])\n",
-    "w2= np.array([1,0,2])\n",
+    "x = np.array([-1, 1])\n",
+    "w1 = np.array([[2, -1],\n",
+    "               [-5, -2],\n",
+    "               [1, 3]])\n",
+    "w2 = np.array([1, 2, 1])\n",
     "\n",
     "test = feed_forward_2(x, w1, w2)\n",
     "\n",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 33,
    "id": "falling-holder",
    "metadata": {},
    "outputs": [
@@ -190,15 +190,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[9.9999969e-01]\n",
-      " [0.0000000e+00]\n",
-      " [3.1000000e-07]]\n",
-      "[[2.6876225e-01]\n",
-      " [6.6620000e-04]\n",
-      " [7.3057155e-01]]\n",
-      "[[9.9999386e-01]\n",
-      " [6.1400000e-06]\n",
-      " [0.0000000e+00]]\n"
+      "[9.8201161e-01 1.7986170e-02 2.2200000e-06]\n"
      ]
     }
    ],
@@ -215,41 +207,23 @@
     "    # Write your code here #\n",
     "    ########################\n",
     "    a = np.dot(w1, x)\n",
-    "    b = np.dot(w2, relu(a))\n",
-    "    return softmax(b)\n",
+    "    b = np.dot(w2, a)\n",
+    "    y = softmax(b)\n",
+    "    return y\n",
     "\n",
     "# Test\n",
     "\n",
     "########################\n",
     "# Write your code here #\n",
     "########################\n",
-    "x = np.array([[5],[2]])\n",
-    "w1 = np.array([[-5,-4],\n",
-    "             [-2,1],\n",
-    "              [1,5]])\n",
-    "w2= np.array([[1,2,3],\n",
-    "             [3,2,1],\n",
-    "             [1,0,2]])\n",
-    "test = feed_forward_3(x, w1, w2)\n",
-    "print(test)\n",
     "\n",
-    "x = np.array([[1],[2]])\n",
-    "w1 = np.array([[0,-4],\n",
-    "             [1,1],\n",
-    "              [1,3]])\n",
-    "w2= np.array([[1,2,1],\n",
-    "             [2,0,1],\n",
-    "             [1,0,2]])\n",
-    "test = feed_forward_3(x, w1, w2)\n",
-    "print(test)\n",
-    "\n",
-    "x = np.array([[5],[3]])\n",
-    "w1 = np.array([[-5,30],\n",
-    "             [-2,31],\n",
-    "              [1,5]])\n",
-    "w2= np.array([[-1,6,-2],\n",
-    "             [3,2,1],\n",
-    "             [1,0,2]])\n",
+    "x = np.array([-1, 1])\n",
+    "w1 = np.array([[2, -1],\n",
+    "               [-5, -2],\n",
+    "               [1, 3]])\n",
+    "w2 = np.array([[-1, -2, 1],\n",
+    "               [1, 0, -1],\n",
+    "               [2, -3, 0.5]])\n",
     "test = feed_forward_3(x, w1, w2)\n",
     "print(test)"
    ]
@@ -270,22 +244,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "5b7d7940",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def se(y_bar, y):\n",
     "    ########################\n",
     "    # Write your code here #\n",
     "    ########################\n",
-    "    \n",
-    "    \n",
+    "\n",
+    "    error = np.sum((y - y_bar)**2)\n",
+    "    return error\n",
+    "        \n",
+    "    return error\n",
     "# Test\n",
     "\n",
     "########################\n",
     "# Write your code here #\n",
-    "########################"
+    "########################\n",
+    "se(-1, 2)\n",
+    "\n"
    ]
   },
   {
@@ -304,21 +294,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "47526b2a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nan\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Eryk\\AppData\\Local\\Temp\\ipykernel_14628\\1926575017.py:7: RuntimeWarning: divide by zero encountered in log\n",
+      "  s = -np.sum((y * np.log(y_bar)) + ((1-y)* np.log(1-y_bar)))\n",
+      "C:\\Users\\Eryk\\AppData\\Local\\Temp\\ipykernel_14628\\1926575017.py:7: RuntimeWarning: invalid value encountered in multiply\n",
+      "  s = -np.sum((y * np.log(y_bar)) + ((1-y)* np.log(1-y_bar)))\n"
+     ]
+    }
+   ],
    "source": [
     "def crossentropy(y_bar, y):\n",
     "    ########################\n",
     "    # Write your code here #\n",
     "    ########################\n",
+    "    loss=-np.sum(y*np.log(y_bar) + (1-y) * np.log(1-y_bar))\n",
+    "    return loss\n",
     "    \n",
+    "    \n",
+    "# def crossentropy(y_bar, y):\n",
+    "#     ce = np.array([0.0]*len(y))\n",
+    "#     ce[y == 1] = np.log(y_bar[y == 1])\n",
+    "#     ce[y == 0] = np.log(1 - y_bar[y == 0])\n",
+    "#     return -np.sum(ce)\n",
     "# Test\n",
     "\n",
     "########################\n",
     "# Write your code here #\n",
-    "########################"
+    "########################\n",
+    "x = np.array([1, 2])\n",
+    "w1 = np.array([[-1, 1],\n",
+    "               [-0.5, 2.5],\n",
+    "               [0, 3]])\n",
+    "w2 = np.array([[-1, 2, 1],\n",
+    "               [1, 0, -1],\n",
+    "               [2, -3, 0.5]])\n",
+    "print(crossentropy(feed_forward_3(x, w1, w2), np.array([1.0, 0.0, 0.0])))"
    ]
   },
   {
@@ -348,7 +372,7 @@
     "    ########################\n",
     "    # Write your code here #\n",
     "    ########################\n",
-    "\n",
+    "    return y - feed_forward_2(x, w1, w2)\n",
     "# Test\n",
     "\n",
     "########################\n",
@@ -382,21 +406,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "98020df9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.04517665973091214\n"
+     ]
+    }
+   ],
    "source": [
     "def sigmoid_derivative(x):\n",
     "    ########################\n",
     "    # Write your code here #\n",
     "    ########################\n",
+    "    return sigmoid(x) * (1- sigmoid(x))\n",
     "\n",
     "# Test\n",
     "\n",
     "########################\n",
     "# Write your code here #\n",
-    "########################"
+    "########################\n",
+    "print(sigmoid_derivative(-3))"
    ]
   },
   {
@@ -415,22 +449,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "d8838f3d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "UFuncTypeError",
+     "evalue": "Cannot cast ufunc 'subtract' output from dtype('float64') to dtype('int32') with casting rule 'same_kind'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUFuncTypeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [37]\u001b[0m, in \u001b[0;36m<cell line: 25>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     22\u001b[0m y \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.5\u001b[39m\n\u001b[0;32m     23\u001b[0m alpha \u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.01\u001b[39m\n\u001b[1;32m---> 25\u001b[0m \u001b[43mbackpropagate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mw1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mw2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43malpha\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[1;32mIn [37]\u001b[0m, in \u001b[0;36mbackpropagate\u001b[1;34m(x, w1, w2, y, alpha)\u001b[0m\n\u001b[0;32m      5\u001b[0m val \u001b[38;5;241m=\u001b[39m feed_forward_2(x, w1, w2)\n\u001b[0;32m      6\u001b[0m loss \u001b[38;5;241m=\u001b[39m se(val, y)\n\u001b[1;32m----> 7\u001b[0m w1 \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m=\u001b[39m loss\n\u001b[0;32m      8\u001b[0m w2 \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m=\u001b[39m loss\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m w1, w2\n",
+      "\u001b[1;31mUFuncTypeError\u001b[0m: Cannot cast ufunc 'subtract' output from dtype('float64') to dtype('int32') with casting rule 'same_kind'"
+     ]
+    }
+   ],
    "source": [
     "def backpropagate(x, w1, w2, y, alpha):\n",
     "    ########################\n",
     "    # Write your code here #\n",
     "    ########################\n",
+    "    val = feed_forward_2(x, w1, w2)\n",
+    "    loss = se(val, y)\n",
+    "    w1 -= loss\n",
+    "    w2 -= loss\n",
     "    return w1, w2\n",
     "\n",
     "# Test\n",
     "\n",
     "########################\n",
     "# Write your code here #\n",
-    "########################"
+    "########################\n",
+    "\n",
+    "x = np.array([[5],[2]])\n",
+    "w1 = np.array([[-5,-4],\n",
+    "             [-2,1],\n",
+    "              [1,5]])\n",
+    "w2= np.array([1,0,2])\n",
+    "y = 0.5\n",
+    "alpha =0.01\n",
+    "\n",
+    "backpropagate(x, w1, w2, y, alpha)"
    ]
   },
   {
@@ -452,6 +513,9 @@
     "    ########################\n",
     "    # Write your code here #\n",
     "    ########################\n",
+    "    \n",
+    "    \n",
+    "    \n",
     "    return w1, w2\n",
     "\n",
     "# Test\n",
@@ -478,7 +542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
