--- a/class_10_neural_networks.ipynb
+++ b/class_10_neural_networks.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "spread-happiness",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "agreed-single",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,8 @@
     "    ########################\n",
     "    # Write your code here #\n",
     "    ########################\n",
-    "    return x * (x > 0)\n",
+    "#     return x * (x > 0)\n",
+    "    return np.maximum(0, x)\n",
     "\n",
     "def feed_forward_1(x, w1, w2):\n",
     "    ########################\n",
@@ -182,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "falling-holder",
    "metadata": {},
    "outputs": [
@@ -190,7 +191,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[9.8201161e-01 1.7986170e-02 2.2200000e-06]\n"
+      "[9.82011610e-01 1.79861700e-02 2.21966972e-06]\n"
      ]
     }
    ],
@@ -200,7 +201,7 @@
     "    # Write your code here #\n",
     "    ########################\n",
     "    e = np.exp(x)\n",
-    "    return np.round(e / np.sum(e),8)\n",
+    "    return e / np.sum(e)\n",
     "\n",
     "def feed_forward_3(x, w1, w2):\n",
     "    ########################\n",
@@ -244,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "id": "5b7d7940",
    "metadata": {},
    "outputs": [
@@ -254,7 +255,7 @@
        "9"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "47526b2a",
    "metadata": {},
    "outputs": [
@@ -302,17 +303,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nan\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Eryk\\AppData\\Local\\Temp\\ipykernel_14628\\1926575017.py:7: RuntimeWarning: divide by zero encountered in log\n",
-      "  s = -np.sum((y * np.log(y_bar)) + ((1-y)* np.log(1-y_bar)))\n",
-      "C:\\Users\\Eryk\\AppData\\Local\\Temp\\ipykernel_14628\\1926575017.py:7: RuntimeWarning: invalid value encountered in multiply\n",
-      "  s = -np.sum((y * np.log(y_bar)) + ((1-y)* np.log(1-y_bar)))\n"
+      "1.154397247699546e-08\n"
      ]
     }
    ],
@@ -542,7 +533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
